# real-world-haskell

./: .gitignore  Makefile  RealWorldHaskell.lhs  Test.hs  real-world-haskell.cabal
